# pyazurehelper

./: CHANGELOG.md  Makefile  README.md  TODO.md  dev_requirements.txt  main.bicep  main.py  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: build.yml
app/: README.md
app/aztoolkit/: __init__.py
app/aztoolkit/src/: az_deploy.py  az_login.py  az_resourcegroup.py  az_subscription.py
app/aztoolkit/test/unit/: test_package.py
app/pyazuretoolkit/src/: az_deploy.py  az_resourcegroup.py
bicep/: params.json  simple-storage.params.json
pyazurehelper/: __init__.py  az_deploy.py  az_login.py  az_resourcegroup.py  az_subscription.py
pyazuretoolkit/: az_deploy.py  az_login.py
src/: main.py
src/pyazuretoolkit/: __init__.py  az_deploy.py  az_login.py  az_resourcegroup.py  az_subscription.py  logging_helper.py
src/test/: test_console.py  test_package.py
src/tests/: test_package.py
src/utils/: __init__.py
test/unit/: test_package.py
utils/: __init__.py  logging_helper.py
