[project]
name = "pyazuretoolkit"
version = "0.0.1"
authors = [
  { name="Aaron Saikovski", email="asaikovski@outlook.com" },
]
description = "An Azure Python toolkit."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AaronSaikovski/pyazuretoolkit"
"Bug Tracker" = "https://github.com/AaronSaikovski/pyazuretoolkit/issues"

[tool.ruff] 
extend-select = [
    "B",
    "BLE",
    "C4",
    "ERA",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PGH",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TCH",
    "TID",
    "YTT",
]
ignore=["E402","B905","N818","S101","T201"]
show-fixes = true

# Assume Python 3.11.
target-version = "py311"