[tool.ruff] 
extend-select = [
    "B",
    "BLE",
    "C4",
    "ERA",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "NPY",
    "PGH",
    "PIE",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TCH",
    "TID",
    "YTT",
]
ignore=["E402","B905","N818","S101","T201"]
show-fixes = true

# Assume Python 3.11.
target-version = "py311"
[tool.poetry]
name = "pyazuretooklit"
version = "0.1.0"
description = "Python Azure Toolkit Package"
authors = ["Aaron Saikovski <asaikovski@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
azure-cli = "^2.49.0"
azure-cli-core = "^2.49.0"
azure-core = "^1.27.1"
azure-identity = "^1.13.0"
azure-common = "^1.1.28"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.3.0"
ruff = "^0.0.275"
bandit = "^1.7.5"
safety = "^2.3.5"
pyinstaller = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
